# rbuilder

./: Cargo.toml  Dockerfile  README.md  config-live-example.toml  config-playground.toml
.github/workflows/: checks.yaml
crates/rbuilder/: Cargo.toml
crates/rbuilder/src/backtest/: backtest_build_block.rs  backtest_build_range.rs
crates/rbuilder/src/backtest/redistribute/cli/: mod.rs
crates/rbuilder/src/building/: order_commit.rs
crates/rbuilder/src/live_builder/: base_config.rs  cli.rs  config.rs  mod.rs
crates/rbuilder/src/live_builder/block_output/: block_sealing_bidder_factory.rs  relay_submit.rs
crates/rbuilder/src/live_builder/block_output/bidding/: wallet_balance_watcher.rs
crates/rbuilder/src/live_builder/order_input/: mod.rs
crates/rbuilder/src/utils/: provider_factory_reopen.rs
crates/reth-rbuilder/: Cargo.toml
crates/reth-rbuilder/src/: main.rs
